CHATS_SIT/force-app/main/default/objects/sfsit_t_job_search_hist__x.object
<CustomObject>
    <description>sfsit$t_job_search_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfsit$t_job_search_hist</externalName>
    <fields>
        <fullName>cde_vrfyd__c</fullName>
        <description>cde_vrfyd</description>
        <externalDeveloperName>cde_vrfyd</externalDeveloperName>
        <label>Verified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_vrfyd_source__c</fullName>
        <description>cde_vrfyd_source</description>
        <externalDeveloperName>cde_vrfyd_source</externalDeveloperName>
        <label>Verified Source</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dte_anniv__c</fullName>
        <description>dte_anniv</description>
        <externalDeveloperName>dte_anniv</externalDeveloperName>
        <label>Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_begin_effv__c</fullName>
        <description>dte_begin_effv</description>
        <externalDeveloperName>dte_begin_effv</externalDeveloperName>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_end_effv__c</fullName>
        <description>dte_end_effv</description>
        <externalDeveloperName>dte_end_effv</externalDeveloperName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_vrfyd__c</fullName>
        <description>dte_vrfyd</description>
        <externalDeveloperName>dte_vrfyd</externalDeveloperName>
        <label>Verified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_client__c</fullName>
        <description>idn_client</description>
        <externalDeveloperName>idn_client</externalDeveloperName>
        <label>Client ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_indiv_job_search__c</fullName>
        <description>idn_indiv_job_search</description>
        <externalDeveloperName>idn_indiv_job_search</externalDeveloperName>
        <label>Individual Job Search ID</label>
        <length>50</length>
        <referenceTargetField>T_JOB_SEARCH__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_JOB_SEARCH__c</referenceTo>
        <relationshipLabel>Job Search Legacy History</relationshipLabel>
        <relationshipName>sfsit_t_job_search_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_indiv_job_search_hist__c</fullName>
        <description>idn_indiv_job_search_hist</description>
        <externalDeveloperName>idn_indiv_job_search_hist</externalDeveloperName>
        <label>Individual Job Search Hist ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sfsit_t_job_search_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ind_record_curr__c</fullName>
        <description>ind_record_curr</description>
        <externalDeveloperName>ind_record_curr</externalDeveloperName>
        <label>Current Record Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical Deleted Record</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Job Search History</label>
    <pluralLabel>Job Search History</pluralLabel>
</CustomObject>